--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "gsap": "^3.11.5",
     "js-cookie": "^3.0.5",
@@ -13,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
