--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
