--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "gsap": "^3.11.5",
+    "i18next": "^23.2.11",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
