--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.0-alpha3",
     "gsap": "^3.11.5",
     "i18next": "^23.2.11",
